Load war zone blocks in batches to prevent server hangs
War zone blocks are now loaded from the database at a configurable speed of blocks per tick. This prevents an entire server from hanging whenever a war zone is reset. The speed can be increased or decreased based on your server's performance.

--- a/war/src/main/resources/messages.properties
+++ b/war/src/main/resources/messages.properties
@@ -92,6 +92,7 @@ zone.battle.end            = The battle is over. Team {0} lost: {1} died and the
 zone.battle.newscores      = New scores - {0}
 zone.battle.next           = The battle was interrupted. Resetting warzone {0}...
 zone.battle.reset          = A new battle begins. Resetting warzone...
+zone.battle.resetprogress  = Reset progress: {0}%, {1} seconds
 zone.bomb.broadcast        = {0} blew up team {1}''s spawn. Team {2} scores one point.
 zone.cake.broadcast        = {0} captured cake {1}. Team {2} scores one point and gets a full lifepool.
 zone.flagcapture.broadcast = {0} captured team {1}''s flag. Team {2} scores one point.
