Fix some issues uncovered in review, add block features.
This fixes some issues found during @taoneill's review of the code. It
also adds a few features with blocks, such as a modify block whitelist.
KDR updates are now stored at the end of each battle in a warzone.
Closes #681, closes #672, closes #682, closes #683, closes #689, ping
#688.

--- a/war/src/main/resources/messages.properties
+++ b/war/src/main/resources/messages.properties
@@ -6,7 +6,8 @@ build.denied.teamblock     = You can only use your team's blocks to capture monu
 build.denied.zone.break    = The blocks in this warzone are unbreakable!
 build.denied.zone.multteam = You already have a {0} block.
 build.denied.zone.outside  = You can't destroy a warzone you are not playing in.
-build.denied.zone.place    = The blocks in this warzone are unbreakable - this also means you can't build!
+build.denied.zone.place    = You cannot place blocks in this warzone.
+build.denied.zone.type     = You cannot modify this type of block.
 
 command.console  = You can't do this if you are not in game.
 command.disabled = You can only use War commands (e.g. /leave) while playing.
