--- a/war/src/main/resources/messages.properties
+++ b/war/src/main/resources/messages.properties
@@ -92,8 +92,9 @@ zone.airstrike             = {0} called in an airstrike!
 zone.battle.end            = The battle is over. Team {0} lost: {1} died and there were no lives left in their life pool.
 zone.battle.newscores      = New scores - {0}
 zone.battle.next           = The battle was interrupted. Resetting warzone {0}...
-zone.battle.reset          = A new battle begins. Resetting warzone...
-zone.battle.resetprogress  = Reset progress: {0}%, {1} seconds
+zone.battle.reset          = A new battle will begin shortly. Resetting warzone...
+zone.battle.resetprogress  = Reset progress: {0}%, {1} seconds...
+zone.battle.resetcomplete  = Warzone reset in {0} seconds. A new battle begins. 
 zone.bomb.broadcast        = {0} blew up team {1}''s spawn. Team {2} scores one point.
 zone.cake.broadcast        = {0} captured cake {1}. Team {2} scores one point and gets a full lifepool.
 zone.flagcapture.broadcast = {0} captured team {1}''s flag. Team {2} scores one point.
