Toggleable team chat. Closes gh-317.
Sorry @grinning, I tried to cherry pick your stuff but it did not work _at all_.

--- a/war/src/main/resources/messages.properties
+++ b/war/src/main/resources/messages.properties
@@ -71,6 +71,9 @@ sign.team.unlimited   = Team {0}\n{1}/{2} players\n{3}/{4} pts\nunlimited lives
 sign.warhub           = War hub\n(/warhub)\nPick your\nbattle!
 sign.warzone          = Warzone\n{0}\n{1}/{2} players\n{3} teams
 
+team.chat.enable  = Team chat toggled on. Your regular chat messages will be received by your team only.
+team.chat.disable = Team chat toggled off.
+
 use.anvil       = You can't use anvils in this warzone!
 use.enchant     = You can't use enchantment tables in this warzone!
 use.ender       = You can't use ender chests while playing in a warzone!
