[Lang] Add FR HU KO NO PL PT localizations
This commit adds localizations for the languages French, Korean, and Norwegian. Portuguese, Hungarian, and Polish are still a work-in-progress but they have been added. The languages German, Spanish, and Russian have been updated also.

--- a/war/src/main/resources/messages_de.properties
+++ b/war/src/main/resources/messages_de.properties
@@ -4,23 +4,23 @@ build.denied.outside = Du kannst nur inerhalb einer Warzone bauen.
 build.denied.teamblock = Du kannst nur dein Team-Block nehmen, um ein Monument einzunehmen.
 build.denied.zone.break = Die Bl\u00f6cke in dieser Warzone sind unzerst\u00f6rbar.
 build.denied.zone.multteam = Du hast schon einen {0} Block.
-build.denied.zone.outside = Du kannst keine Warzone zerst\u00f6ren, in der du nicht bist.
-build.denied.zone.place = Du kannst keine Bl\u00f6cke in dieser Warzone bauen.
+build.denied.zone.outside = Du kannst nichts in einer Warzone zerst\u00f6ren,wenn du dich nicht in ihr befindest.
+build.denied.zone.place = Du kannst in dieser Warzone keine Bl\u00f6cke setzen.
 build.denied.zone.type = Du kannst keine Bl\u00f6cke dieses Typs zerst\u00f6ren.
-command.console = Du kannst das nicht in der Konsole machen.
+command.console = Dieser Command ist leider nicht von der Konsole aus nutzbar
 command.disabled = Du kannst nur War Kommandos (Z.Bsp. /leave) ausf\u00fchren, w\u00e4hrend du spielst!
 drop.bomb.broadcast = {0} hat die {1} Bombe fallen gelassen.
 drop.bomb.disabled = Du kannst keine Items droppen w\u00e4hrend du die Bombe stielst.\nWas machst du?! Renne zu dem Spawn von deinen Feinden!
 drop.cake.broadcast = {0} hat den {1} Kuchen fallen gelassen.
-drop.cake.disabled = Du kannst keine Items droppen w\u00e4hrend du den Kuchen stielst.\nWas machst du?! Renne zu dem Spawn von deinem Team!
+drop.cake.disabled = Du kannst keine Items droppen w\u00e4hrend du den Kuchen stielst.\nWorauf wartest du ?! Lauf!
 drop.flag.broadcast = {0} hat die {1} Fahne fallen gelassen!
-drop.flag.disabled = Du kannst keine Items droppen w\u00e4hrend du die Fahne stielst!\nWas machst du? RENNE!
+drop.flag.disabled = Du kannst keine Items droppen w\u00e4hrend du die Fahne stielst!\nWorauf wartest du ? RENN!
 drop.item.border = Du kannst keine Items in der N\u00e4he des Randes droppen!
 drop.item.disabled = Du kannst keine Items in dieser Warzone droppen!
-drop.item.spawn = Du kannst keine Items droppen, wenn du noch am Spawn stehst!
+drop.item.spawn = Du kannst keine Items droppen, w\u00e4hrend du noch am Spawn stehst!
 drop.team = Du kannst {0} Bl\u00f6cke nicht droppen!
-drop.wand = Du hast die Zone {0} Werkzeug gedroppt!
-join.aarequired = Diese Warzone braucht dich in einem zuf\u00e4lligen Team!\nBenutze bitte das automatische Tor!
+drop.wand = Du hast das Werkzeug der Zone {0} gedroppt!
+join.aarequired = In dieser Warzone wird f\u00fcr dich ein zuf\u00e4lliges Team ausgew\u00e4hlt.\nBitte laufe durch das Tor !
 join.broadcast = {0} hat das Team {1} betreten!
 join.disabled = Diese Warzone ist deaktiviert.
 join.full.all = Alle Teams sind voll.
@@ -50,9 +50,9 @@ pvp.kill.weapon.bow = Bogen
 pvp.kill.weapon.hand = Hand
 pvp.outside.permission = Du kannst keine Spieler au\u00dferhalb der Arena angreifen.
 pvp.self.notplaying = Du musst in einer Arena sein, um anzugreifen.
-pvp.self.respawn = Du kannst nicht angreifen, w\u00e4hrend dem Wiederbeleben.
+pvp.self.respawn = Du kannst nicht angreifen, w\u00e4hrend du dich gerade Erholst.
 pvp.self.spawn = Du kannst nicht im Spawn angreifen.
-pvp.target.notplaying = Dein Ziel spielt nicht in einer Kriegszone.
+pvp.target.notplaying = Dein Ziel spielt nicht in einer Warzone.
 pvp.target.otherzone = Dein Ziel spielt in einer anderen Kriegszone.
 pvp.target.respawn = Dein Zeil spawnt gerade neu.
 pvp.target.spawn = Dein Zeil ist noch im Spawn.
@@ -63,6 +63,8 @@ sign.team.limited = Team {0}\n{1}/{2} Spieler\n{3}/{4} Pkt\n{5} Leben
 sign.team.unlimited = Team {0}\n{1}/{2} Spieler\n{3}/{4} Pkt\nunbegrenzt
 sign.warhub = Warhub\n(/warhub)\nW\u00e4hle deine\nKampf
 sign.warzone = Kriegszone\n{0}\n{1}/{2} Spieler\n{3} Teams
+team.chat.enable = Team-Chat wurde aktiviert! Deine Nachrichten k\u00f6nnen jetzt nur noch von deinem Team gelesen werden.
+team.chat.disable = Team-Chat wurde deaktiviert!
 use.anvil = Du kannst keine Ambosse in einer Kriegszone benutzen.
 use.enchant = Du kannst keine Verzauberungstische in einer Kriegszone benutzen.
 use.ender = Du kannst keiner Enderkisten in einer Kriegszone benutzen.
@@ -82,13 +84,14 @@ zone.battle.newscores = Neuer Stand - {0}
 zone.battle.next = Der Kampf wurde unterbrochen. Kriegszone {0} wird zur\u00fcck gesetzt...
 zone.battle.reset = Ein neuer Kampf beginnt. Setzte Kampfzone zu\u00fcck...
 zone.battle.resetprogress = Fortschritt - Zur\u00fccksetzen: {0}%, {1} Sekunden.
+zone.battle.resetcomplete = Warzone wird in {0} zur\u00fcck gesetzt. Ein neuer Kampf beginnt
 zone.bomb.broadcast = {0} explodierte Team {1}s Spawn. Team {2} hat einen Punkt.
 zone.cake.broadcast = {0} hat Kuchen: {1} gesichert. Team {2} Hat einen Punkt und hat wieder volle Leben.
 zone.flagcapture.broadcast = {0} hat Team {1}s Flagge gesichert. Team {2} hat eine Punkt erzielt
 zone.flagreturn.deadlock = Du kannst die gegnerische Flagge nicht sichern, bis deine Team-Flagge gesichert wurde.
 zone.flagreturn.flag = Du musst die gegnerische Flagge bei deiner Team Flagge sichern.
 zone.flagreturn.spawn = Du musst die gegnerische Flagge bei deinem Team Spawn sichern.
-zone.leavenotice = Benutze /war leave um die Zone zu verlassen.
+zone.leavenotice = Benutze /leave um die Zone zu verlassen.
 zone.lifepool.empty = Team {0}s Leben sind leer. Ein Tod mehr und sie verlieren den Kampf.
 zone.loadout.equip = Mit {0} ausger\u00fcstet (Schleiche zum wechseln).
 zone.loadout.reenter = Wechsle die Ausr\u00fcstung nach dem Verlassen des Spawns.
