Update locales KO PL
PL has been completed, KO corrections.
There needed to be a trailing newline on the warhub sign localization or the plugin crashed when loading a lobby.

--- a/war/src/main/resources/messages_ko_KR.properties
+++ b/war/src/main/resources/messages_ko_KR.properties
@@ -7,7 +7,7 @@ build.denied.zone.multteam = \uc774\ubbf8 {0} \ube14\ub7ed\uc744 \uac00\uc9c0\ua
 build.denied.zone.outside = \uc804\uc7c1\uc5d0 \ucc38\uc5ec\ud558\uc9c0 \uc54a\uace0 \uc804\uc7c1\uad6c\uc5ed\uc5d0\uc11c \ube14\ub7ed\uc744 \ud30c\uad34\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
 build.denied.zone.place = \uc774 \uc804\uc7c1\uc5d0\uc11c \ube14\ub7ed\uc744 \uc124\uce58\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
 build.denied.zone.type = \uc804\uc7c1\uc5d0\uc11c \uc774 \ube14\ub7ed\uc744 \uc124\uce58 \ub610\ub294 \ud30c\uad34\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
-command.console = \uc804\uc7c1\uac8c\uc784\uc911\uc5d0\ub9cc \uc0ac\uc6a9\uac00\ub2a5\ud55c \ucee4\ub9e8\ub4dc\uc785\ub2c8\ub2e4.
+command.console = \ucf58\uc194\uc5d0\uc11c \uc0ac\uc6a9\ud560 \uc218 \uc5c6\ub294 \ucee4\ub9e8\ub4dc\uc785\ub2c8\ub2e4.
 command.disabled = \uac8c\uc784\ub3c4\uc911\uc5d0\ub294 \uc804\uc7c1\uac8c\uc784 \ucee4\ub9e8\ub4dc (\uc608\uc2dc: /leave) \uc774\uc678\uc5d0\ub294 \uc0ac\uc6a9\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
 drop.bomb.broadcast = {0} \uc774(\uac00) {1} \uc5d0\uac8c \ud3ed\ud0c4\uc744 \ud22c\ud558\ud588\uc2b5\ub2c8\ub2e4!
 drop.bomb.disabled = \ud3ed\ud0c4\uc744 \ud6d4\uce58\uba74 \uc544\uc774\ud15c\uc744 \ub5a8\uc5b4\ub728\ub9b4 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4. \uc9c0\uae08 \ub2f9\uc7a5 \uc801\uad70 \uae30\uc9c0\uc758 \uc2a4\ud3f0\uc73c\ub85c \uac00\uc2ed\uc2dc\uc624!
@@ -18,14 +18,14 @@ drop.flag.disabled = \uae43\ubc1c\uc744 \ud6d4\uce60 \ub54c \uc544\uc774\ud15c\u
 drop.item.border = \uc804\uc7c1\uad6c\uc5ed \uacbd\uacc4\uc120 \uadfc\ucc98\uc5d0\uc11c \uc544\uc774\ud15c\uc744 \ub5a8\uc5b4\ub728\ub9b4 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
 drop.item.disabled = \uc774 \uc804\uc7c1\uc5d0\uc11c \uc544\uc774\ud15c\uc744 \ub5a8\uc5b4\ub728\ub9b4 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
 drop.item.spawn = \uae30\uc9c0 \uc2a4\ud3f0\uad6c\uc5ed\uc5d0\uc11c\ub294 \uc544\uc774\ud15c\uc744 \ub5a8\uc5b4\ub728\ub9b4 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
-drop.team = {0} \uc591\ud138 \ube14\ub7ed\uc744 \ub5a8\uc5b4\ub728\ub9b4 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
+drop.team = {0} \ube14\ub7ed\uc744 \ub5a8\uc5b4\ub728\ub9b4 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
 drop.wand = \uc804\uc7c1\uad6c\uc5ed\uc5d0 {0} wand \ub97c \ub5a8\uc5b4\ub728\ub838\uc2b5\ub2c8\ub2e4.
 join.aarequired = \uc804\uc7c1\uc744 \ucc38\uac00\ud558\ub824\uba74 \ud300\uc5d0 \uac00\uc785\ub418\uc5b4\uc57c\ub429\ub2c8\ub2e4. \uc804\uc7c1\ucc38\uac00 \uac8c\uc774\ud2b8\ub97c \ud1b5\uacfc\ud558\uc2ed\uc2dc\uc624.
 join.broadcast = {0} \uc774(\uac00) {1} \ud300\uc73c\ub85c \uc804\uc7c1\uc5d0 \ucc38\uac00\ud588\uc2b5\ub2c8\ub2e4.
 join.disabled = \uc774 \uc804\uc7c1\uc740 \ud604\uc7ac \ube44\ud65c\uc131\ud654 \ub418\uc5b4 \uc788\uc2b5\ub2c8\ub2e4.
 join.full.all = \uc774 \uc804\uc7c1\uc758 \ubaa8\ub4e0 \ud300 \uc778\uc6d0\uc218\uac00 \ucc3c\uc2b5\ub2c8\ub2e4.
 join.full.single = {0} \ud300 \uc778\uc6d0\uc218\uac00 \ucc3c\uc2b5\ub2c8\ub2e4.
-join.inventorystored = \ub2f9\uc2e0\uc758 \uc778\ubca4\ud1a0\ub9ac\uac00 \ube44\uc6cc\uc84c\uc9c0\ub9cc \uc800\uc7a5\ub418\uc5b4 \uc804\uc7c1\uc774 \ub05d\ub098\uac70\ub098 /sg leave \ub97c \uc785\ub825\ud558\uba74 \ub2e4\uc2dc \ubcf5\uad6c\ub429\ub2c8\ub2e4.
+join.inventorystored = \ub2f9\uc2e0\uc758 \uc778\ubca4\ud1a0\ub9ac\uac00 \ube44\uc6cc\uc84c\uc9c0\ub9cc \uc800\uc7a5\ub418\uc5b4 \uc804\uc7c1\uc774 \ub05d\ub098\uac70\ub098 /war leave \ub97c \uc785\ub825\ud558\uba74 \ub2e4\uc2dc \ubcf5\uad6c\ub429\ub2c8\ub2e4.
 join.permission.all = \uc774 \uc804\uc7c1\uc758 \uc5b4\ub5a4 \ud300\uc5d0\ub3c4 \ucc38\uac00\ud560 \uad8c\ud55c\uc774 \uc5c6\uc2b5\ub2c8\ub2e4.
 join.permission.single = {0} \ud300\uc5d0 \ucc38\uac00\ud560 \uad8c\ud55c\uc774 \uc5c6\uc2b5\ub2c8\ub2e4.
 join.progress = \uc774 \uc804\uc7c1\uc740 \ud604\uc7ac \uc9c4\ud589\uc911\uc774\uc5ec\uc11c \ucc38\uac00\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
@@ -35,7 +35,7 @@ leave.broadcast = {0} \uc774(\uac00) \uc804\uc7c1\uc5d0\uc11c \ub098\uac14\uc2b5
 leave.inventoryrestore = \ub2f9\uc2e0\uc758 \uc778\ubca4\ud1a0\ub9ac\uac00 \ub2e4\uc2dc \ubcf5\uad6c\ub418\uc5c8\uc2b5\ub2c8\ub2e4.
 pvp.death.drown = {0} \uc774(\uac00) \ubb3c\uc5d0 \ube60\uc838 \uc8fd\uc5c8\uc2b5\ub2c8\ub2e4
 pvp.death.explosion = {0} \uc774(\uac00) \ud3ed\ubc1c\ub85c \uc8fd\uc5c8\uc2b5\ub2c8\ub2e4
-pvp.death.fall = {0} \uc774(\uac00) \ubd88\ubd84\uba85\ud55c \uc774\uc720\ub85c \uc8fd\uc5c8\uc2b5\ub2c8\ub2e4
+pvp.death.fall = {0} \uc774(\uac00) \ub099\uc0ac\ud574\uc11c \uc8fd\uc5c8\uc2b5\ub2c8\ub2e4
 pvp.death.fire = {0} \uc774(\uac00) \ubd88\uc5d0 \ud0c0\uc11c \uc8fd\uc5c8\uc2b5\ub2c8\ub2e4
 pvp.death.other = {0} \uc774(\uac00) \uc8fd\uc5c8\uc2b5\ub2c8\ub2e4
 pvp.ff.disabled = \uc790\uc2e0\uc758 \ud300\uc6d0\uc744 \uacf5\uaca9\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4. \uc801\uc744 \uacf5\uaca9\ud558\uc2ed\uc2dc\uc624
@@ -44,8 +44,8 @@ pvp.kill.adjectives = ;;\uac15\ub825\ud55c;\uc8fd\uc74c\uc758;\ud6cc\ub96d\ud55c
 pvp.kill.bomb = {0} \uc774(\uac00) {1} \uc744(\ub97c) \ud130\ub728\ub838\uc2b5\ub2c8\ub2e4!
 pvp.kill.format = {0} \uc758 {1} {2} {3} {4}
 pvp.kill.self = {0} \uc774(\uac00) \uc790\uc0b4\ud588\uc2b5\ub2c8\ub2e4
-pvp.kill.verbs = \uc8fd\uc74c;\uc8fd\uc74c;\uc8fd\uc74c;\ub05d\ub09c;\uc804\uba78\ub41c;\uc0b4\ud574\ub41c;\ub9d0\uc18c\ub41c;\uc808\uba78\ub41c
-pvp.kill.weapon.aim = \uaca8\ub0e5
+pvp.kill.verbs = \uc5d0 \uc8fd\uc740;\uc5d0 \uc8fd\uc740;\uc5d0 \uc8fd\uc740;\uc5d0 \uc8fd\uc740;\uc5d0 \uc8fd\uc740;\uc5d0 \uc8fd\uc740;\uc5d0 \uc8fd\uc740;\uc5d0 \uc8fd\uc740
+pvp.kill.weapon.aim = \ubaa9\ud45c
 pvp.kill.weapon.bow = \ud65c
 pvp.kill.weapon.hand = \uc190
 pvp.outside.permission = \uc804\uc7c1\uad6c\uc5ed \ubc16\uc5d0 \uc788\ub294 \ud50c\ub808\uc774\uc5b4\ub97c \uacf5\uaca9\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
@@ -58,11 +58,11 @@ pvp.target.respawn = \ub9ac\uc2a4\ud3f0\uc911\uc778 \ud50c\ub808\uc774\uc5b4\ub9
 pvp.target.spawn = \uc2a4\ud3f0\uc9c0\uc5ed\uc5d0 \uc788\ub294 \ud50c\ub808\uc774\uc5b4\ub97c \uacf5\uaca9\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4!
 sign.lobby.autoassign = {0}\n\uc804\uc7c1\n\uac8c\uc774\ud2b8\ub97c\n\ud1b5\uacfc\ud558\uc2ed\uc2dc\uc624.
 sign.lobby.pick = \uc804\uc7c1\uad6c\uc5ed\n{0} \n \n\ud300\uc744 \uc120\ud0dd\ud558\uc2ed\uc2dc\uc624.
-sign.lobby.warhub = \n\uc804\uc7c1\ub85c\ube44\ub85c \uac00\uae30\n
-sign.team.limited = {0} \ud300\n\uc778\uc6d0\uc218: {1}/{2}\n\ud3ec\uc778\ud2b8: {3}/{4}\n{5} \uba85 \uc0dd\uc874
+sign.lobby.warhub = \n\uc804\uc7c1\ub85c\ube44\ub85c \uac00\uae30\n\n
+sign.team.limited = {0} \ud300\n\uc778\uc6d0\uc218: {1}/{2}\n\ud3ec\uc778\ud2b8: {3}/{4}\n\ub0a8\uc740 \ubaa9\uc228: {5}
 sign.team.unlimited = {0} \ud300\n\uc778\uc6d0\uc218: {1}/{2}\n\ud3ec\uc778\ud2b8: {3}/{4}\n\ubaa9\uc228 \ubb34\uc81c\ud55c
 sign.warhub = \uc804\uc7c1\ub85c\ube44\n(/warhub)\n\uc6d0\ud558\ub294 \uc804\uc7c1\uc885\ub958\n\ub97c \uc120\ud0dd\ud558\uc2ed\uc2dc\uc624!
-sign.warzone = {0}\n\uc804\uc7c1\n\uc778\uc6d0\uc218: {1}/{2}\n{3} \uac1c\uc758 \ud300
+sign.warzone = \uc804\uc7c1\uad6c\uc5ed\n{0}\n\uc778\uc6d0\uc218: {1}/{2}\n\ud300: {3} \uac1c
 team.chat.enable = \ud300\ub07c\ub9ac \ucc44\ud305\ud560 \uc218 \uc788\uc2b5\ub2c8\ub2e4. \ub2f9\uc2e0\uc758 \uc77c\ubc18\ucc44\ud305 \uba54\uc2dc\uc9c0\uac00 \ub2f9\uc2e0\uc758 \ud300\uc5d0\uac8c\ub9cc \ubcf4\uc77c \uac83\uc785\ub2c8\ub2e4.
 team.chat.disable = \ud300\ub07c\ub9ac \ucc44\ud305\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
 use.anvil = \uc774 \uc804\uc7c1\uc5d0\uc11c \ubaa8\ub8e8\ub97c \uc0ac\uc6a9\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4!
@@ -84,7 +84,7 @@ zone.battle.newscores = \uc2e0\uaddc \uc810\uc218 - {0}
 zone.battle.next = {0} \uc804\uc7c1\uad6c\uc5ed\uc744 \uc7ac\uc2dc\uc791\ud558\uba74\uc11c \uc804\uc7c1\uc774 \uc911\ub2e8\ub418\uc5c8\uc2b5\ub2c8\ub2e4..
 zone.battle.reset = \uace7 \uc0c8\ub85c\uc6b4 \uc804\uc7c1\uc774 \uc2dc\uc791\ub429\ub2c8\ub2e4. \uc804\uc7c1\uad6c\uc5ed\uc774 \uc7ac\uc2dc\uc791\uc911\uc785\ub2c8\ub2e4..
 zone.battle.resetprogress = {0}% \uc7ac\uc2dc\uc791\uc911, {1}\ucd08..
-zone.battle.resetcomplete = \uc804\uc7c1\uc774 {0} \ucd08 \ud6c4 \uc81c\uc2dc\uc791\ub429\ub2c8\ub2e4. \uc7a0\uc2dc \ud6c4 \uc0c8\ub85c\uc6b4 \uc804\uc7c1\uac8c\uc784\uc774 \uc2dc\uc791\ub429\ub2c8\ub2e4.
+zone.battle.resetcomplete = \uc804\uc7c1\uc774 \uc7ac\uc2dc\uc791\ub418\ub294\ub370 {0} \ucd08\uac00 \uac78\ub838\uc2b5\ub2c8\ub2e4. \uc0c8\ub85c\uc6b4 \uc804\uc7c1\uc774 \uc2dc\uc791\ub429\ub2c8\ub2e4.
 zone.bomb.broadcast = {0} \ud300\uc774 {1} \ud300\uc758 \uc2a4\ud3f0\uc7a5\uc18c\ub97c \ud3ed\ubc1c\uc2dc\ucf30\uc2b5\ub2c8\ub2e4. {2} \ud300\uc774 1\uc810\uc744 \ud68d\ub4dd\ud588\uc2b5\ub2c8\ub2e4.
 zone.cake.broadcast = {0} \ud300\uc774 {1} \ud300\uc758 \ucf00\uc774\ud06c\ub97c \uc7a1\uc558\uc2b5\ub2c8\ub2e4. {2} \ud300\uc774 1\uc810\uc744 \ud68d\ub4dd\ud558\uace0 \ubaa9\uc228\uc774 \ubaa8\ub450 \ucc44\uc6cc\uc9d1\ub2c8\ub2e4.
 zone.flagcapture.broadcast = {0} \ud300\uc774 {1} \ud300\uc758 \uae43\ubc1c\uc744 \uc7a1\uc558\uc2b5\ub2c8\ub2e4. {2} \ud300\uc774 1\uc810\uc744 \ud68d\ub4dd\ud588\uc2b5\ub2c8\ub2e4.
