--- a/war/src/main/resources/messages_no.properties
+++ b/war/src/main/resources/messages_no.properties
@@ -58,7 +58,7 @@ pvp.target.respawn = M\u00e5let respawner!
 pvp.target.spawn = M\u00e5let har ikke forlatt spawn!
 sign.lobby.autoassign = Krigssone\n{0}
 sign.lobby.pick = Krigssone\n{0}\nVelg et lag
-sign.lobby.warhub = \nTil Samlingplassen\n
+sign.lobby.warhub = \nTil Samlingplassen\n\n
 sign.team.limited = Lag {0}\n{1}/{2} spillere\n{3}/{4} poeng\n{5} liv igjen
 sign.team.unlimited = Lag {0}\n{1}/{2} spillere\n{3}/{4} poeng\nuendelig med liv
 sign.warhub = Samlingsplass\n(/warhub)\nVelg din\nkamp!
