--- a/war/src/main/resources/messages_pl.properties
+++ b/war/src/main/resources/messages_pl.properties
@@ -19,6 +19,7 @@ drop.item.border = Nie mo\u017cesz wyrzuca\u0107 przedmiot\u00f3w w pobli\u017cu
 drop.item.disabled = Nie mo\u017cesz wyrzuca\u0107 przedmiot\u00f3w na tej arenie.
 drop.item.spawn = Nie mo\u017cesz wyrzuca\u0107 przedmiot\u00f3w gdy przebywasz na spawn.
 drop.team = Nie mo\u017cesz wyrzuca\u0107 {0} klock\u00f3w.
+drop.wand = Upu\u015bci\u0142e\u015b r\u00f3\u017cd\u017ck\u0119 {0} areny.
 join.aarequired = Ta arena wymaga automatycznego przydzielenia do dru\u017cyny.\nProsz\u0119 wejd\u017a w kolorow\u0105 bram\u0119.
 join.broadcast = {0} przy\u0142\u0105czy\u0142/a si\u0119 do dru\u017cyny {1}
 join.disabled = Ta arena jest wy\u0142\u0105czona.
@@ -57,15 +58,18 @@ pvp.target.respawn = Tw\u00f3j cel jeszcze si\u0119 nie odrodzi\u0142.
 pvp.target.spawn = Cel jest wci\u0105\u017c na spawn.
 sign.lobby.autoassign = Arena\n{0}\nDru\u017cyny wybier-\nane automatyczn
 sign.lobby.pick = Arena\n{0}\n \nWybierz dru\u017cyn\u0119
-sign.lobby.warhub = \nDo strefy wojny\n
+sign.lobby.warhub = \nDo strefy wojny\n\n
 sign.team.limited = Dru\u017cyna {0}\n{1}/{2} graczy\n{3}/{4} pkt\n{5} \u017cy\u0107
 sign.team.unlimited = Dru\u017cyna {0}\n{1}/{2} graczy\n{3}/{4} pkt\n\u221e \u017cycia
 sign.warhub = War hub\n(/warhub)\nWybierz swoj\u0105\naren\u0119!
 sign.warzone = Arena\n{0}\n{1}/{2} graczy\n{3} dru\u017cyny
+team.chat.enable = Czat zespo\u0142u w\u0142\u0105czony. Twoje wiadomo\u015bci b\u0119d\u0105 przekazywane tylko graczom z twojego zespo\u0142u.
+team.chat.disable = Czat zespo\u0142u wy\u0142\u0105czony.
 use.anvil = Nie mo\u017cesz u\u017cywa\u0107 kowad\u0142a na tej arenie!
 use.enchant = Nie mo\u017cesz u\u017cywa\u0107 sto\u0142u do zaklinania na tej arenie!
 use.ender = Nie mo\u017cesz korzysta\u0107 ze skrzyni kresu podczas gry na arenie!
 use.item.spawn = Nie mo\u017cesz korzysta\u0107 z przedmiot\u00f3w gdy jeste\u015b na spawn.
+use.xpkillmeter = Jest to spowodowane w\u0142\u0105czon\u0105 opcj\u0105 "XPKillMeter".
 wand.toofar = Blok na kt\u00f3ry celujesz jest za daleko.
 war.notadmin = Nie mo\u017cesz tego robi\u0107 je\u015bli nie jeste\u015b War admin'em ( permission war.admin).
 war.notzm = Nie mo\u017cesz tego robi\u0107 je\u015bli nie jeste\u015b tw\u00f3rc\u0105 aren (permission war.zonemaker).
@@ -80,6 +84,7 @@ zone.battle.newscores = Nowy wynik - {0}
 zone.battle.next = Walka zosta\u0142a przerwana. Restartowanie areny {0}...
 zone.battle.reset = Nowa bitwa rozpocznie si\u0119 nied\u0142ugo.Restartowanie areny...
 zone.battle.resetprogress = Restartowanie areny post\u0119p: {0}%, {1}sekund...
+zone.battle.resetcomplete = Nowa bitwa rozpocznie si\u0119 za {0} sekund. Restartowanie areny...
 zone.bomb.broadcast = {0} Wysadzi\u0142 spawn dru\u017cyny {1}. Dru\u017cyna {2} zdobywa jeden punkt.
 zone.cake.broadcast = {0} przej\u0105\u0142 ciasto {1}. Dru\u017cyna {2} zdobywa jeden punkt i dostaje odnawia wszystkie \u017cycia.
 zone.flagcapture.broadcast = {0} Przej\u0105\u0142 flag\u0119 dru\u017cyny {1}. Dru\u017cyna {2} zdobywa jeden punkt.
@@ -97,3 +102,28 @@ zone.monument.voodoo = Tw\u00f3j taniec zadowoli\u0142 pomnik boga voodoo. Zdoby
 zone.noteamnotice = Nie mo\u017cesz przebywa\u0107 na arenie bez dru\u017cyny.
 zone.score.board404 = Ta arena nie korzysta z tablicy wynik\u00f3w.
 zone.score.empty = Nie mo\u017cesz dosta\u0107 punkt\u00f3w do momentu do\u0142\u0105czenia innego gracza do dru\u017cyny przeciwnej.
+zone.spawn.minplayers = Nie mo\u017cesz opu\u015bci\u0107 terenu spawna dop\u00f3ki tw\u00f3j team: {1} nie osi\u0105gnie wystarczaj\u0105cej ilo\u015bci graczy! Minimum: {0}.
+zone.spawn.timer = Nie mo\u017cesz opu\u015bci\u0107 spawnu przez {0} sekund!
+zone.steal.bomb.broadcast = {0} ma bomb\u0119 {1}
+zone.steal.bomb.notice = Masz bomb\u0119 {0}. Dotrzyj do spawnu przeciwnego zespo\u0142u. Nie pozw\u00f3l si\u0119 dotkn\u0105\u0107, bo wybuchniesz!
+zone.steal.bomb.prevent = Zapobiegnij {0} przed dotarciem do twojego spawnu z bomb\u0105!
+zone.steal.cake.broadcast = {0} ma ciasto {1}.
+zone.steal.cake.notice = Masz {0} ciast. Dotrzyj do twojego spawnu i uzupe\u0142nij ciasta.
+zone.steal.cake.prevent = Zapobiegnij {0} przed dotarciem do twojego spawnu z ciastem!
+zone.steal.flag.broadcast = {0} ukrad\u0142 flag\u0119 teamowi {1}
+zone.steal.flag.empty = Nie mo\u017cesz ukra\u015b\u0107 flagi zespo\u0142owi {0} gdy\u017c w tym zespole nie ma graczy.
+zone.steal.flag.notice = Masz flag\u0119 zespo\u0142u {0}. Dotrzyj do spawnu albo flagi \u017ceby j\u0105 z\u0142apa\u0107!
+zone.steal.flag.prevent = Zapobiegnij {0} przez dostaniem si\u0119 do flagi {1}
+zone.stealextra.bomb = Mo\u017cesz tylko ukra\u015b\u0107 jedn\u0105 bomb\u0119 na raz!
+zone.stealextra.cake = Mo\u017cesz tylko ukra\u015b\u0107 jedne ciasto na raz!
+zone.stealextra.flag = Mo\u017cesz tylko ukra\u015b\u0107 jedn\u0105 flag\u0119 na raz!
+zone.stealextra.other = Mo\u017cesz tylko ukra\u015b\u0107 jedn\u0105 rzecz na raz!
+zone.teaminfo.format = {0}: {1} punkt\u00f3w, {2}/{3} \u017cy\u0107 zosta\u0142o. {4}
+zone.teaminfo.none = brak
+zone.teaminfo.prefix = Dru\u017cyny:
+zone.teleport = Witaj na arenie {0}.
+zone.warp.permission = Nie masz uprawnie\u0144 do teleportacji do areny.
+zone.zone404 = Nie mo\u017cna znale\u017a\u0107 areny.
+zone.zoneinfo.format = {0}:{1} zespo\u0142\u00f3w, {2} graczy
+zone.zoneinfo.prefix = Areny:
+zone.zoneinfo.teleport = U\u017cyj /zone <zone-name> aby teleportowa\u0107 si\u0119 do areny.
