Teleport 'warmup' time - delay before teleport
Closes #507.

War now includes a configuration option "TPWARMUP" to add delays
before teleporting players to a war. This can be used on full-world
PvP servers to prevent players from running away from a fight.

The configuration option is specified in ticks - 20/sec.

The delay is activated for /zone and /warhub.

@taoneill @cmastudios documentate for 1.9 release.

--- a/war/src/main/resources/messages.properties
+++ b/war/src/main/resources/messages.properties
@@ -9,6 +9,10 @@ build.denied.zone.place = You cannot place blocks in this warzone.
 build.denied.zone.type = You cannot modify this type of block.
 command.console = You can't do this if you are not in game.
 command.disabled = You can only use War commands (e.g. /leave) while playing.
+command.tp.init = Please wait for {0} seconds before teleportation. Movement or damage will cancel the timer.
+command.tp.moved = Teleportation cancelled due to movement.
+command.tp.damaged = Teleportation cancelled due to damage.
+command.tp.success = You have been teleported. Thanks for your patience.
 drop.bomb.broadcast = {0} dropped the {1} bomb!
 drop.bomb.disabled = You can't drop items while stealing bomb. What are you doing?! Run for your enemy's spawn!
 drop.cake.broadcast = {0} dropped the {1} cake!
