Correct spelling and grammar
* Fix unescaped quotes causing resourcebundle message breakage.
* Fix verb tense of 'loses'
* Fix spelling of 'monument'

Closes #761

--- a/war/src/main/resources/messages.properties
+++ b/war/src/main/resources/messages.properties
@@ -97,7 +97,7 @@ zone.loadout.equip = Equipped {0} loadout (sneak to switch).
 zone.loadout.reenter = Can't change loadout after exiting the spawn.
 zone.monument.badblock = You must capture a monument with a block of your team's wool color. Get one from your team spawn.
 zone.monument.capture = Monument {0} has been captured by team {1}.
-zone.monument.lose = Team {0} loses control of mounment {1}
+zone.monument.lose = Team {0} lost control of monument {1}.
 zone.monument.voodoo = Your dance pleases the monument''s voodoo. You gain {0} heart(s)!
 zone.noteamnotice = You can't be inside a warzone without a team.
 zone.score.board404 = This warzone has not enabled a scoreboard.
@@ -105,13 +105,13 @@ zone.score.empty = You can't score until at least one player joins another team.
 zone.spawn.minplayers = You can''t leave spawn until there''s a minimum of {0} player(s) on at least {1} team(s).
 zone.spawn.timer = You can''t leave spawn for {0} second(s) after respawning!
 zone.steal.bomb.broadcast = {0} has bomb {1}.
-zone.steal.bomb.notice = You have bomb {0}. Reach another team's spawn to score. Don't get touched by anyone or you'll blow up!
+zone.steal.bomb.notice = You have bomb {0}. Reach another team''s spawn to score. Don''t get touched by anyone or you''ll blow up!
 zone.steal.bomb.prevent = Prevent {0} from reaching your spawn with the bomb!
 zone.steal.cake.broadcast = {0} has cake {1}.
 zone.steal.cake.notice = You have cake {0}. Reach your team''s spawn to score and replenish your lifepool.
 zone.steal.cake.prevent = Prevent {0} from reaching their spawn with the cake!
 zone.steal.flag.broadcast = {0} stole team {1}''s flag.
-zone.steal.flag.empty = You can't steal team {0}'s flag since no players are on that team.
+zone.steal.flag.empty = You can''t steal team {0}''s flag since no players are on that team.
 zone.steal.flag.notice = You have team {0}''s flag. Reach your team spawn or flag to capture it!
 zone.steal.flag.prevent = Prevent {0} from reaching team {1}''s spawn or flag.
 zone.stealextra.bomb = You can only steal one bomb at a time!
