--- a/war/src/main/resources/messages_no.properties
+++ b/war/src/main/resources/messages_no.properties
@@ -6,17 +6,17 @@ build.denied.zone.break = Blokkene i denne krigssonen er uknuselige!
 build.denied.zone.multteam = Du har allerede en {0}-blokk
 build.denied.zone.outside = Du kan ikke \u00f8delegge en krigssone du ikke spiller i
 build.denied.zone.place = Du kan ikke sette ut blokker i denne krigssonen
-build.denied.zone.type = Du kan ikke endre slike blokker
+build.denied.zone.type = Du kan ikke endre denne type blokker
 command.console = Du m\u00e5 v\u00e6re i et spill for \u00e5 gj\u00f8re det
 command.disabled = Du kan bare bruke War-kommandoer (som /leave) n\u00e5r du spiller
 drop.bomb.broadcast = {0} mistet {1}-bomben!
-drop.bomb.disabled = Du kan ikke droppe ting mens du stjeler bomber. Hva gj\u00f8r du?! L\u00f8p til fiendens spawn!
+drop.bomb.disabled = Du kan ikke droppe ting mens du stjeler bomber. Hva gj\u00f8r du?! L\u00f8p til fiendens spaw!n
 drop.cake.broadcast = {0} mistet {1}-kaken
-drop.cake.disabled = Du kan ikke droppe ting mens du stjeler kaker. Hva gj\u00f8r du?! L\u00f8p til fiendens spawn!
+drop.cake.disabled = Du kan ikke droppe ting mens du stjeler kaker. Hva gj\u00f8r du?! L\u00f8p!
 drop.flag.broadcast = {0} mistet {1}-flagget
-drop.flag.disabled = Du kan ikke droppe ting mens du stjeler flagget. Hva gj\u00f8r du?! L\u00f8p!!
+drop.flag.disabled = Du kan ikke droppe ting mens du stjeler flagget. Hva gj\u00f8r du?! L\u00f8p!
 drop.item.border = Du kan ikke droppe ting s\u00e5 n\u00e6r sone-grensen
-drop.item.disabled = Du kan ikke droppe ting i denne sonen
+drop.item.disabled = Du kan ikke droppe ting i denne krigssonen
 drop.item.spawn = Du kan ikke droppe ting i spawn
 drop.team = Du kan ikke droppe {0} blokker
 drop.wand = Du droppet wand til sone {0}
