--- a/war/src/main/resources/messages_pl.properties
+++ b/war/src/main/resources/messages_pl.properties
@@ -9,6 +9,10 @@ build.denied.zone.place = Nie mo\u017cesz k\u0142a\u015b\u0107 blok\u00f3w na te
 build.denied.zone.type = Nie mo\u017cesz modyfikowa\u0107 tego typu blok\u00f3w.
 command.console = Nie mo\u017cesz tego robi\u0107, je\u015bli nie jeste\u015b w grze.
 command.disabled = Mo\u017cesz u\u017cy\u0107 tylko komend z War (np. /leave) podczas gry.
+command.tp.init = Poczekaj {0} sekund na teleportacj\u0119. Ruch b\u0105d\u017a obra\u017cenia zatrzymaj\u0105 odliczanie.
+command.tp.moved = Teleportacja zatrzymana z powodu ruchu.
+command.tp.damaged = Teleportacja zatrzymana z powodu obra\u017ce\u0144.
+command.tp.success = Zosta\u0142e\u015b teleportowany. Dzi\u0119kujemy za cierpliwo\u015b\u0107.
 drop.bomb.broadcast = {0} pod\u0142o\u017cy\u0142 {1} bomb\u0119!
 drop.bomb.disabled = Nie mo\u017cesz wyrzuca\u0107 przedmiot\u00f3w gdy ukrad\u0142e\u015b bomb\u0119. Co ty robisz?!Biegnij do wrogiej bazy!
 drop.cake.broadcast = {0} Upu\u015bci\u0142 {1} ciasto!
@@ -71,7 +75,7 @@ use.ender = Nie mo\u017cesz korzysta\u0107 ze skrzyni kresu podczas gry na areni
 use.item.spawn = Nie mo\u017cesz korzysta\u0107 z przedmiot\u00f3w gdy jeste\u015b na spawn.
 use.xpkillmeter = Jest to spowodowane w\u0142\u0105czon\u0105 opcj\u0105 "XPKillMeter".
 wand.toofar = Blok na kt\u00f3ry celujesz jest za daleko.
-war.notadmin = Nie mo\u017cesz tego robi\u0107 je\u015bli nie jeste\u015b War admin'em ( permission war.admin).
+war.notadmin = Nie mo\u017cesz tego robi\u0107 je\u015bli nie jeste\u015b War admin''em ( permission war.admin).
 war.notzm = Nie mo\u017cesz tego robi\u0107 je\u015bli nie jeste\u015b tw\u00f3rc\u0105 aren (permission war.zonemaker).
 war.prefix = War>
 war.title = War
@@ -95,7 +99,7 @@ zone.leavenotice = Wpisz /war leave aby opu\u015bci\u0107 aren\u0119.
 zone.lifepool.empty = Dru\u017cyna {0} nie posiada wi\u0119cej \u017cy\u0107.Jedna \u015bmier\u0107 wi\u0119cej i przegraj\u0105 oni bitw\u0119!
 zone.loadout.equip = Wyposa\u017cenie {0} za\u0142adowane (kucnij aby zmieni\u0107)
 zone.loadout.reenter = Nie mo\u017cesz zmieni\u0107 wyposa\u017cenia po opuszczeniu spawn.
-zone.monument.badblock = Musisz przej\u0105\u0107 pomnik blokiem we\u0142ny koloru twojej dru\u017cyny.\nMo\u017cesz go zdoby\u0107 ze spawn'u swojej dru\u017cyny.
+zone.monument.badblock = Musisz przej\u0105\u0107 pomnik blokiem we\u0142ny koloru twojej dru\u017cyny.\nMo\u017cesz go zdoby\u0107 ze spawn''u swojej dru\u017cyny.
 zone.monument.capture = Pomnik {0} zosta\u0142 przej\u0119ty przez dru\u017cyn\u0119 {1}.
 zone.monument.lose = Dru\u017cyna {0} straci\u0142a kontrol\u0119 nad pomnikiem {1}.
 zone.monument.voodoo = Tw\u00f3j taniec zadowoli\u0142 pomnik boga voodoo. Zdobywasz {0} serduszko/a \u017cycia.
